@@ -8,6 +8,7 @@ Import-Package: com.googlecode.concurrentlinkedhashmap,
  com.javacodegeeks.concurrent,
  com.openexchange.api2,
  com.openexchange.caching,
+ com.openexchange.caching.events,
  com.openexchange.concurrent,
  com.openexchange.config,
  com.openexchange.database,
